navBar spacing fix

--- a/src/Karina.scss
+++ b/src/Karina.scss
@@ -55,3 +55,17 @@ a.left:hover:before {
   width: 100%;
 }
 
+
+#navRight{
+    display:flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    padding:20px;
+}
+
+#titleLeft{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    padding:20px;
+}
